<resources>
    <string name="app_name">Hopby</string>

    <string name="button_create">CREATE</string>
    <string name="button_filter">FILTER</string>
    <string name="button_maps">MAPS</string>
    <string name="button_login">LOGIN</string>
    <string name="button_session">SESSION</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_submit">SUBMIT</string>
    <string name="button_signup">SIGN UP</string>
    <string name="button_info">INFO</string>
    <string name="button_back">BACK</string>

    <string name="title_activity_login">Hopby - Login</string>
    <string name="title_activity_signup">Hopby - Sign Up</string>
    <string name="title_activity_session_overview">Hopby - All Sessions</string>
    <string name="title_activity_session_info">Hopby - Session Info</string>
    <string name="title_activity_maps">Hopby - Map</string>
    <string name="title_activity_create_session">Hopby - Create New Session</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="slots">Slots</string>
    <string name="time">Time (hhmm)</string>
    <string name="date">Date</string>
    <string name="hobby">Hobby</string>

    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="filter_football">FOOTBALL</string>
    <string name="filter_basketball">BASKETBALL</string>
    <string name="filter_hike">HIKE</string>

    <string name="filter_monday">MON</string>
    <string name="filter_tuesday">TUE</string>
    <string name="filter_wednesday">WED</string>
    <string name="filter_thursday">THU</string>
    <string name="filter_friday">FRI</string>
    <string name="filter_saturday">SAT</string>
    <string name="filter_sunday">SUN</string>

    <string name="filter_evening">EVENING</string>
    <string name="filter_afternoon">AFTERNOON</string>
    <string name="filter_morning">MORNING</string>
    <string name="filter_hobby">Hobby:</string>
    <string name="filter_day">Days:</string>
    <string name="filter_time">Time:</string>
    <string name="football">Football</string>
    <string name="basketball">Basketball</string>
    <string name="hike">Hike</string>
    <string name="button_map">MAP</string>
    <string name="button_logout">LOGOUT</string>

    <string name="info_title">Title:</string>
    <string name="info_description">Description:</string>
    <string name="info_hobbyId">Hobby:</string>
    <string name="info_slots">Slots:</string>
    <string name="info_location">Location:</string>
    <string name="info_users">Users:</string>
    <string name="host_delete_text">You are the host, do you want to delete this session?</string>
    <string name="button_delete">DELETE</string>

    <string name="main_hello_name">Hello name ð á þ ö </string>
    <string name="view_sessions_all">All Sessions</string>
    <string name="view_sessions_my">My Sessions</string>
    <string name="my_session_header">xxx\'s Sessions</string>
    <string name="info_host">Host:</string>
    <string name="info_date">Date:</string>
    <string name="info_time">Time:</string>
    <string name="no_sessions_found">No sessions found</string>
    <string name="grid_header">Upcoming sessions:</string>
    <string name="grid_header_past">Past sessions:</string>
    <string name="create_error_string">Make sure that everything is filled out correctly</string>
    <string name="no_my_sessions">Oh no, you have no upcoming sessions!</string>
    <string name="button_home">HOME</string>

</resources>