<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FilterActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:gravity="right"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:paddingEnd="30dp"
            android:text="@string/username"
            android:textAppearance="@android:style/TextAppearance.Material.Headline" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linerLayoutFilter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="11dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/filter_text_hobby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/filter_hobby" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_hobby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_football"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_football"
                    android:textAlignment="center" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_basketball"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_basketball"
                    android:textAlignment="center" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_hike"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_hike"
                    android:textAlignment="center" />

            </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/filter_text_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/filter_day" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_days"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_monday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_monday"
                    android:textAlignment="center" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_tuesday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_tuesday"
                    android:textAlignment="center" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_wednesday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_wednesday"
                    android:textAlignment="center" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_thursday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_thursday"
                    android:textAlignment="center" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_friday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_friday"
                    android:textAlignment="center" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_saturday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_saturday"
                    android:textAlignment="center" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_sunday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_sunday"
                    android:textAlignment="center" />

            </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/filter_text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/filter_time" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_morning"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_morning"
                    android:textAlignment="center" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_afternoon"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_afternoon"
                    android:textAlignment="center" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_evening"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_evening"
                    android:textAlignment="center" />
            </com.google.android.material.chip.ChipGroup>
        <Button
            android:id="@+id/filter_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/button_submit" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>