<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateSessionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="44dp">

            <LinearLayout
                android:layout_width="328dp"
                android:layout_height="736dp"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <Spinner
                        android:id="@+id/hobby_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:prompt="@string/hobby"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CalendarView
                        android:id="@+id/input_date_calendarView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/time"
                        android:inputType="time" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_slots"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/slots" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_description"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:inputType="textMultiLine"
                        android:lines="3" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/maps_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/button_maps" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:padding="20dp">

                    <Button
                        android:id="@+id/cancel_button"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:enabled="true"
                        android:text="@string/button_cancel" />

                    <Button
                        android:id="@+id/submit_button"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:enabled="true"
                        android:text="@string/button_submit" />

                </LinearLayout>
            </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>