<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignupActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="521dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/ic_logosvg" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:hint="@string/name"
                android:background="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_user"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_margin="7dp"
                android:hint="@string/username"
                android:background="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_passw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="192dp"
            android:layout_height="133dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/button_signup" />

            <Button
                android:id="@+id/button_back"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/button_back"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>